working on code

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     </div>
     
         <div class="row">
-        <div class="col-3">
+        <div class="col-2 citySearch">
             <form>
-                <div class="input-group">
+                <div class="input-group cityInput">
                     <input type="text" class="form-control" id="citySearch" placeholder="Enter a city...">
                     <div class="input-group-btn">
                         <button class="btn btn-default" type="submit" id="searchBtn">
@@ -34,7 +34,7 @@
             <div id="searchResults"></div>
         </div>
        
-        <div class="col-9">
+        <div class="col-10">
             <div class="row" id="oneDayDisplay">
                 <div id="weatherDisplay">               
             </div>
